[package]
name = "piccp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "piccp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version="1.18.1", features=["rt-multi-thread","macros","sync"]}
clap = {version="3.1.14", features = ["derive","env","cargo"]}
nokhwa = "0.9.4"
qrcode = "0.12.0"


[build-dependencies]
version-rs = { git = "https://github.com/eucleo/version-rs.git" }
