[package]
name = "piccp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "piccp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.19.2", features=["rt-multi-thread","macros","sync","io-std"]}
tokio-util = {version="0.7.3", features=["codec"]}
futures = "0.3.21"
bytes = "1.1.0"
clap = {version="3.1.18", features = ["derive","env","cargo"]}
qrcode = "0.12.0"
bardecoder = "0.3.0"
image = "0.23"
tui = "0.18"
crossterm = {version="0.23", features = ["event-stream"]}

[target.'cfg(unix)'.dependencies]
nokhwa = {version="0.9.4", features = ["input-v4l", "input-uvc"]}

[target.'cfg(windows)'.dependencies]
nokhwa = {version="0.9.4", features = ["input-msmf"]}

[target.'cfg(mac)'.dependencies]
nokhwa = {version="0.9.4", features = ["input-avfoundation"]}

[build-dependencies]
version-rs = { git = "https://github.com/eucleo/version-rs.git" }
